--- a/force-app/main/default/classes/CP_ConvertContactToOnboarding.cls
+++ b/force-app/main/default/classes/CP_ConvertContactToOnboarding.cls
@@ -27,18 +27,15 @@ public class CP_ConvertContactToOnboarding implements Database.Batchable<sObject
     
     public void execute(Database.BatchableContext bc, List<Contact> contactList){
         
-        //List<EMS_EM_Onboarding_Request__c> applicantsList = new List<EMS_EM_Onboarding_Request__c>();
         List<Contact> applicantsToSendMail = new List<Contact>();
         List<Contact> finalContactList = new List<Contact>();
         
         for(Contact contactRec : contactList){
             if((contactRec.EMS_EM_JD__c.addDays(-10) == System.today() || contactRec.EMS_EM_JD__c.addDays(-11) == System.today()) && contactRec.Is_PreOnboarding_Mail_Sent__c == False){
-               /*EMS_EM_Onboarding_Request__c applicantRec = new EMS_EM_Onboarding_Request__c();
-                applicantRec.EMS_EM_Personal_Email__c = contactRec.Personal_Email__c;
-                applicantRec.Date_of_Joining__c = contactRec.EMS_EM_JD__c;
-                applicantRec.ContactId1__c = contactRec.Id;
-                applicantsList.add(applicantRec);*/
                 applicantsToSendMail.add(contactRec);
+                System.debug('Today ==> '+system.today());
+                System.debug('DOJ ==> '+contactRec.EMS_EM_JD__c);
+                System.debug('DOJ minus 10days ==> '+contactRec.EMS_EM_JD__c.addDays(-10));
                 String status = sendOnboardingEmail(contactRec.Personal_Email__c,contactRec.Id);
                 if(status == 'success'){
                     sendEmailToHR(contactRec.Id);
@@ -46,7 +43,7 @@ public class CP_ConvertContactToOnboarding implements Database.Batchable<sObject
                 }  
             }
         }
-        //insert applicantsList;
+        
         if(applicantsToSendMail.size() > 0){
             for(Contact con : applicantsToSendMail){
                 con.Is_PreOnboarding_Mail_Sent__c = True;
@@ -54,20 +51,14 @@ public class CP_ConvertContactToOnboarding implements Database.Batchable<sObject
             }
             update finalContactList;
         }
-       /* List<ems_EM_Additional_Detail__c> additionalDetailsList = new List<ems_EM_Additional_Detail__c>();
-        for(EMS_EM_Onboarding_Request__c onboardingRecords : applicantsList){
-            ems_EM_Additional_Detail__c applicantRec = new ems_EM_Additional_Detail__c();
-            applicantRec.Onboarding_Request__c = onboardingRecords.id;
-            applicantRec.ContactId__c = onboardingRecords.ContactId1__c;
-            additionalDetailsList.add(applicantRec);
-        }
-        insert additionalDetailsList;*/
+        
     }
     
     public static String sendOnboardingEmail(String email,string recordId){
         List<Messaging.SingleEmailMessage> mails =  new List<Messaging.SingleEmailMessage>(); 
         EmailTemplate emailTemplate =[Select Id,Subject,Description,HtmlValue,DeveloperName,Body from EmailTemplate
                                       where name ='Onboarding Form Email' LIMIT 1];
+        String fromEmail = [SELECT Id, Address, DisplayName FROM OrgWideEmailAddress where DisplayName = 'Grid'].Id;
         List<string> emailList = new List<string>();
         emailList.add(email);
         Messaging.SingleEmailMessage message = new Messaging.SingleEmailMessage();
@@ -75,6 +66,7 @@ public class CP_ConvertContactToOnboarding implements Database.Batchable<sObject
         message.setTemplateID(emailTemplate.Id);
         message.setTargetObjectId(recordId);
         message.setTreatTargetObjectAsRecipient(false);
+        message.setOrgWideEmailAddressId(fromEmail);
         message.setSaveAsActivity(false);
         Messaging.SendEmailResult[] results = Messaging.sendEmail(new Messaging.SingleEmailMessage[] { message });
         if (results[0].success) {
@@ -90,6 +82,7 @@ public class CP_ConvertContactToOnboarding implements Database.Batchable<sObject
                                       where name ='Notify To Hr After Onboarding Form Sent' LIMIT 1];
 
         String hrTeamEmail = [SELECT id, DeveloperName, Email__c from Employee_Details__mdt WHERE DeveloperName = 'HR_Team'].Email__c;
+        String fromEmail = [SELECT Id, Address, DisplayName FROM OrgWideEmailAddress where DisplayName = 'Grid'].Id;
         List<String> hrEmailList = new List<String>();
         hrEmailList.add(hrTeamEmail);
         
@@ -98,6 +91,7 @@ public class CP_ConvertContactToOnboarding implements Database.Batchable<sObject
         message.setTemplateID(emailTemplate.Id);
         message.setTargetObjectId(recordId);
         message.setTreatTargetObjectAsRecipient(false);
+        message.setOrgWideEmailAddressId(fromEmail);
         message.setSaveAsActivity(false);
         Messaging.sendEmail(new Messaging.SingleEmailMessage[] { message });
     }
@@ -108,6 +102,7 @@ public class CP_ConvertContactToOnboarding implements Database.Batchable<sObject
                                       where name ='After Applicant Record Inserted Admin' LIMIT 1];
          
         String taTeamEmail = [SELECT id, DeveloperName, Email__c from Employee_Details__mdt WHERE DeveloperName = 'Admin_Team'].Email__c;
+        String fromEmail = [SELECT Id, Address, DisplayName FROM OrgWideEmailAddress where DisplayName = 'Grid'].Id;
         List<String> adminEmailList = new List<String>();
         adminEmailList.add(taTeamEmail);
         
@@ -117,6 +112,7 @@ public class CP_ConvertContactToOnboarding implements Database.Batchable<sObject
         message.setTargetObjectId(recordId);
         message.setTreatTargetObjectAsRecipient(false);
         message.setSaveAsActivity(false);
+        message.setOrgWideEmailAddressId(fromEmail);
         Messaging.sendEmail(new Messaging.SingleEmailMessage[] { message });
     }
     public void finish(Database.BatchableContext bc){
