--- a/force-app/main/default/classes/resourceTileController.cls
+++ b/force-app/main/default/classes/resourceTileController.cls
@@ -1,8 +1,10 @@
 public without sharing class resourceTileController {
 @AuraEnabled(cacheable=true)
     public static datawrapper getUserInfo(Id userId) {
+      
         User urecord = [SELECT FullPhotoUrl,Id,Name,Employee_Id__c,Contact.EMS_RM_Employee_Id__c,ContactId,
-                        Contact.ReportsTo.Name,Contact.Resource_Role__r.Name FROM User WHERE Id = :Userinfo.getUserId()];
+                        Contact.ReportsTo.Name,Contact.Resource_Role__r.Name FROM User WHERE Id = :Userinfo.getUserId() and ContactId != null];
+       
         Contact conRec = [SELECT Id,Work_Location__c,Work_Location__r.Country__c,(SELECT Id FROM PayRolls__r),(Select Id,Amount__c FROM Benefits__r WHERE Type__c = 'Medical Insurence') FROM Contact WHERE Id=:urecord.contactId];
         datawrapper dwrap = new datawrapper();
         dwrap.resourceName = urecord.Name;
@@ -40,14 +42,16 @@ public without sharing class resourceTileController {
     }
     @AuraEnabled(cacheable=true)
     public static List<datawrapper> getTheCurrentAlerts(){
-        Date dt = system.today();
+        
+        Date dt = Test.isRunningTest() ? system.today().adddays(1) : system.today();
+       
         List<datawrapper> dwrap = new List<datawrapper>();
         User urecord = [SELECT FullPhotoUrl,Id,Name,Employee_Id__c,Contact.EMS_RM_Employee_Id__c,ContactId,
                         Contact.ReportsTo.Name,Contact.Resource_Role__r.Name,Contact.Resource_Role__c FROM User WHERE Id = :Userinfo.getUserId()];
         for(Grid_Configuration__c gridc : [SELECT Id,Description__c,Notification_Type__c,Name,Goal_End_Date__c,Goal_Start_Date__c,Grid_Configuration_Type__c,
                                          Navigation_address__c,is_Navigation_Required__c,Resource_Role__c 
                                          FROM Grid_Configuration__c 
-                                         WHERE Goal_Start_Date__c=:dt AND (Grid_Configuration_Type__c = 'Org Level Alert' OR Grid_Configuration_Type__c = 'Resource Role Alert')]){
+                                         WHERE (Goal_Start_Date__c <=:dt AND Goal_End_Date__c>=:dt) AND (Grid_Configuration_Type__c = 'Org Level Alert' OR Grid_Configuration_Type__c = 'Resource Role Alert')]){
           if(gridc.Grid_Configuration_Type__c == 'Org Level Alert'){
           datawrapper dw = new datawrapper();
           dw.isAlert = gridc.Notification_Type__c == 'Alert' ? true:false;
