--- a/force-app/main/default/classes/CP_SendEmailToHRTeamNewApplicant.cls
+++ b/force-app/main/default/classes/CP_SendEmailToHRTeamNewApplicant.cls
@@ -49,6 +49,7 @@ public class CP_SendEmailToHRTeamNewApplicant implements TriggerAction.AfterInse
         List<Messaging.SingleEmailMessage> mails =  new List<Messaging.SingleEmailMessage>(); 
         EmailTemplate emailTemplate =[Select Id,Subject,Description,HtmlValue,DeveloperName,Body from EmailTemplate
                                       where name ='After Applicant Record Inserted HR'];
+        String fromEmail = [SELECT Id, Address, DisplayName FROM OrgWideEmailAddress where DisplayName = 'Grid'].Id;
         
         for(Contact contactRec : contactList){
             if(contactRec.RecordTypeId == contRecordTypeId){
@@ -57,6 +58,7 @@ public class CP_SendEmailToHRTeamNewApplicant implements TriggerAction.AfterInse
                 mail.setTemplateID(emailTemplate.Id);
                 mail.setTargetObjectId(contactRec.id);
                 mail.setTreatTargetObjectAsRecipient(false);
+                mail.setOrgWideEmailAddressId(fromEmail);
                 mail.setSaveAsActivity(false);         
                 mails.add(mail);
             }   
